--- a/libpipecolors.7
+++ b/libpipecolors.7
@@ -1,60 +1,41 @@
-.\" Copyright (c) 2009 Linux Foundation, written by Michael Kerrisk
-.\"     <mtk.manpages@gmail.com>
+.\" Copyright (c) 2015 Eric Wheeler (eric@rewiv.com)
 .\"
-.\" %%%LICENSE_START(VERBATIM)
-.\" Permission is granted to make and distribute verbatim copies of this
-.\" manual provided the copyright notice and this permission notice are
-.\" preserved on all copies.
+.\" %%%LICENSE_START(GPLv2+_DOC_FULL)
+.\" This is free documentation; you can redistribute it and/or
+.\" modify it under the terms of the GNU General Public License as
+.\" published by the Free Software Foundation; either version 2 of
+.\" the License, or (at your option) any later version.
 .\"
-.\" Permission is granted to copy and distribute modified versions of this
-.\" manual under the conditions for verbatim copying, provided that the
-.\" entire resulting derived work is distributed under the terms of a
-.\" permission notice identical to this one.
+.\" The GNU General Public License's references to "object code"
+.\" and "executables" are to be interpreted as the output of any
+.\" document formatting or typesetting system, including
+.\" intermediate and printed output.
 .\"
-.\" Since the Linux kernel and libraries are constantly changing, this
-.\" manual page may be incorrect or out-of-date.  The author(s) assume no
-.\" responsibility for errors or omissions, or for damages resulting from
-.\" the use of the information contained herein.  The author(s) may not
-.\" have taken the same level of care in the production of this manual,
-.\" which is licensed free of charge, as they might when working
-.\" professionally.
+.\" This manual is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\" GNU General Public License for more details.
 .\"
-.\" Formatted or processed versions of this manual, if unaccompanied by
-.\" the source, must acknowledge the copyright and authors of this work.
+.\" You should have received a copy of the GNU General Public
+.\" License along with this manual; if not, see
+.\" <http://www.gnu.org/licenses/>.
 .\" %%%LICENSE_END
 .\"
-.TH LIBPIPECOLORS 7 2015-07-01 "Linux" "libpipecolors"
+.\" 2015-07-06 eric@rewiv.com \- initial program
+.\"
+.TH libpipecolors 3 2015-07-06 "LIBPIPECOLORS" "libpipecolors c++/c library"
 .SH NAME
 libpipecolors \- print old bbs/renegade style pipecodes in c/c++
+.SH SYNOPSIS
+.B #include <pipecolors.h>
+.sp
+.B using namespace pipecolors;
 .SH DESCRIPTION
+\fIlibpipecolors\fR is a library that parses a string with pipe color codes \fB|01\fR and replaces them with ansi color codes for the linux terminal.
+.SS On the web
+.PR
+https://github.com/sk-5/libpipecolors/
 
-.I libpipecolors
-is a library that parses a string with pipe color codes
-.B |01
-and replaces them with ansi color codes for the linux terminal.
-.SS Other C libraries
-.UR http://www.uclibc.org/
-.I uClibc
-.UE ,
-.UR http://www.fefe.de/dietlibc/
-.I dietlibc
-.UE ,
-and
-.UR http://www.musl-libc.org/
-.I "musl libc"
-.UE .
-Details of these libraries are covered by the
-.I man-pages
-project, where they are known.
 .SH SEE ALSO
 .BR pcprintf (3),
-.BR pcsprintf (3),
-.SH COLOPHON
-This page is part of release 0.1 of
-.I libpipecolors
-.
-A description of the project,
-information about reporting bugs,
-and the latest version of this page,
-can be found at
-\%https://github.com/sk-5/libpipecolors/.
+.BR pcsprintf (3)
