--- a/README
+++ b/README
@@ -18,7 +18,7 @@ int pcsprintf(char * str, const char * format, ...);
 ***********
 
 [x] Remove std::map requirement
-[ ] Remove boost requirement without forcing -std=c++11
+[x] Remove boost requirement without forcing -std=c++11 (Reduced size from 1.2M to 87K)
 
 *****************
 ** Example use **
